--- a/fresa.org
+++ b/fresa.org
@@ -1137,7 +1137,7 @@ One of the features that /Fresa/ provides is a trace of how each solution has be
   # create the initial population consisting of this single point
   p0 = [Fresa.createpoint(x0,rosenbrock)]
   # now invoke Fresa to solve the problem
-  best, pop = Fresa.solve(rosenbrock, p0, domain)
+  best, pop = Fresa.solve(rosenbrock, p0, domain; ngen=1000, tolerance=1e-8)
   println("Population at end: $pop")
   println("Best solution is f($( best.x ))=$( best.z ) with g=$( best.g )")
 #+end_src
