fixed author names in bibliography

--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,5 @@
 @article{fraga-2019a,
-  author={Eric S. Fraga},
+  author={Fraga, E. S.},
   title={An example of multi-objective optimization for dynamic processes},
   journal={Chemical Engineering Transactions},
   year={2019},
@@ -10,7 +10,7 @@
 
 @misc{fraga2021multiple,
       title={Multiple simultaneous solution representations in a population based evolutionary algorithm}, 
-      author={Eric S. Fraga},
+      author={Fraga, E. S.},
       year={2021},
       eprint={2106.05096},
       archivePrefix={arXiv},
@@ -20,7 +20,7 @@
 }
 
 @unpublished{fresa,
-  author={Eric S. Fraga},
+  author={Fraga, E. S.},
   title={The {Fresa} plant propagation algorithm for optimization},
   year={2021},
   note={{doi:10.5281/zenodo.5045812}},
@@ -29,7 +29,7 @@
 }
 
 @incollection{fraga-amusat-2016a,
-  author={Eric S Fraga and Oluwamayowa Amusat},
+  author={Fraga, E. S. and Amusat, O. O.},
   title={Understanding the impact of constraints: a rank based fitness function for evolutionary methods},
   booktitle={Advances in Stochastic and Deterministic Global Optimization},
   publisher={Springer},
@@ -39,7 +39,7 @@
   doi={10.1007/978-3-319-29975-4}
 }
 @inproceedings{dejonge-vandenberg-2020a,
-  author={Marleen de Jonge and Daan van den Berg},
+  author={{de Jonge}, M. and {van den Berg}, D.},
   title={Plant Propagation Parameterization: Offspring \& Population Size},
   booktitle={Evostar 2020, The Leading European Event on Bio-Inspired Computation},
   year={2020}
@@ -95,9 +95,7 @@
   year={1989}
 }
 @INPROCEEDINGS{488968,
-  author={Kennedy,
- J. and Eberhart,
- R.},
+  author={Kennedy, J. and Eberhart, R.},
   booktitle={Proceedings of ICNN'95 - International Conference on Neural Networks},
    title={Particle swarm optimization},
    year={1995},
