full names for all publications

--- a/paper.bib
+++ b/paper.bib
@@ -48,7 +48,7 @@
 @article{bezanson-etal-2017a,
   author={Jeff Bezanson and Alan Edelman and Stefan Karpinski and Viral B. Shah},
   title={Julia: A Fresh Approach to Numerical Computing},
-  journal={SIAM Rev.},
+  journal={Society for Industrial and Applied Mathematics (SIAM) Review},
   year={2017},
   volume={59},
   number={1},
@@ -58,7 +58,7 @@
 @book{kelley-1999,
   author={C. T. Kelley},
   title={Iterative methods for optimization},
-  publisher={SIAM},
+  publisher={Society for Industrial and Applied Mathematics (SIAM)},
   year={1999}
 }
 
@@ -74,7 +74,7 @@
 @article{deb-2000,
   author={Kalyanmoy Deb},
   title={An efficient constraint handling method for genetic algorithms},
-  journal={Comput. Methods Appl. Mech. Engng.},
+  journal={Computer Methods in Applied Mechanics and Engineering},
   year={2000},
   volume={186},
   pages={311-338}
