updated Zenodo reference

--- a/paper.bib
+++ b/paper.bib
@@ -19,13 +19,13 @@
       primaryClass={cs.NE}
 }
 
-@unpublished{fresa,
-  author={Fraga, E. S.},
-  title={The {Fresa} plant propagation algorithm for optimization},
+@misc{fresa,
+  author={Eric S. Fraga},
+  title={{ericsfraga/Fresa.jl}: {First} public release (r2021.06.30)},
   year={2021},
   note={{doi:10.5281/zenodo.5045812}},
   doi={10.5281/zenodo.5045812},
-  url={http://github.com/ericsfraga/Fresa.jl}
+  url={https://doi.org/10.5281/zenodo.5045812}
 }
 
 @incollection{fraga-amusat-2016a,
