use Point directly and not createpoint

--- a/fresa.org
+++ b/fresa.org
@@ -775,7 +775,7 @@ The following code splits a population into those points that are non-dominated 
   f = x -> ( [sin(x[1]-x[2]); cos(x[1]+x[2])], 0)
   pop = Fresa.Point[]
   for i=1:10
-      push!(pop, Fresa.createpoint(Fresa.randompoint(a,b), f))
+      push!(pop, Fresa.Point(Fresa.randompoint(a,b), f))
   end
   z = map(p->p.z, pop)
   # (p, d) = Fresa.paretoindices(z)
@@ -959,7 +959,8 @@ Create a random population of size ~n~ evaluated using ~f~.  A single point, =x=
           # @show u
           # x = randompoint(l,u)
           # push!(p, createpoint(x, f, parameters))
-          push!(p, createpoint(randompoint(domain.lower(p0.x), domain.upper(p0.x)), f, parameters))
+          push!(p, Point(randompoint(domain.lower(p0.x), domain.upper(p0.x)),
+                         f, parameters))
       end
       p
   end
@@ -1261,7 +1262,7 @@ The *output* of the progress during the search is controlled by the ~output~ opt
                       push!(x, newx)
                       # push!(points, pop[s])
                   else
-                      push!(newpop, createpoint(newx, f, parameters, Ancestor(pop[s],fit[s],gen)))
+                      push!(newpop, Point(newx, f, parameters, Ancestor(pop[s],fit[s],gen)))
                       if plotvectors
                           write(plotvectorio, "$(gen-1) $(pop[s].x)\n$gen $newx\n\n")
                       end
@@ -1280,31 +1281,31 @@ The *output* of the progress during the search is controlled by the ~output~ opt
           if multithreading       # using threads and shared memory
               results = Array{Point}(undef,length(x))
               Threads.@threads for i ∈ 1:length(x)
-                  results[i] = createpoint(x[i],f,parameters)
+                  results[i] = Point(x[i],f,parameters)
               end
               append!(newpop, results)
-          elseif parallel        # using multiple processors with remote calls
-              # will be used to collect results from worker processors
-              results = Array{Future,1}(undef, nprocs())
-              i = 0;
-              while i < length(x)
-                  # issue remote evaluation call
-                  for j=1:nprocs()
-                      if i+j <= length(x) 
-                          # TODO: the information about the ancestor is
-                          # not available; this needs to be stored above
-                          results[j] = @spawn createpoint(x[i+j],f,parameters)
-                          nf += 1
-                      end
-                  end
-                  # now wait for results
-                  for j=1:nprocs()
-                      if i+j <= length(x)
-                          push!(newpop, fetch(results[j]))
-                      end
-                  end
-                  i += nprocs()
-              end
+              # elseif parallel        # using multiple processors with remote calls
+              #     # will be used to collect results from worker processors
+              #     results = Array{Future,1}(undef, nprocs())
+              #     i = 0;
+              #     while i < length(x)
+              #         # issue remote evaluation call
+              #         for j=1:nprocs()
+              #             if i+j <= length(x) 
+              #                 # TODO: the information about the ancestor is
+              #                 # not available; this needs to be stored above
+              #                 results[j] = @spawn createpoint(x[i+j],f,parameters)
+              #                 nf += 1
+              #             end
+              #         end
+              #         # now wait for results
+              #         for j=1:nprocs()
+              #             if i+j <= length(x)
+              #                 push!(newpop, fetch(results[j]))
+              #             end
+              #         end
+              #         i += nprocs()
+              #     end
           end
           # and finally, if we have elitism, remove any duplicate points
           # in the new population and make it the current population for
