output all parameter values, and in alphabetical order

--- a/fresa.org
+++ b/fresa.org
@@ -1149,16 +1149,17 @@ The *output* of the progress during the search is controlled by the ~output~ opt
           println("#+name: $(f)settings")
           println("| variable | value |")
           println("|-")
+          println("| elite | $elite |")
+          println("| archive | $archiveelite |")
+          println("| ϵ | $ϵ |")
+          println("| fitness | $fitnesstype |")
+          println("| issimilar | $issimilar |")
           println("| ngen | $ngen |")
           println("| np | $np |")
           println("| nrmax | $nrmax |")
           println("| ns | $ns |")
-          println("| elite | $elite |")
-          println("| archive | $archiveelite |")
-          println("| fitness | $fitnesstype |")
-          println("| tournamentsize | $tournamentsize |")
           println("| steepness | $steepness |")
-          println("| ϵ | $ϵ |")
+          println("| tournamentsize | $tournamentsize |")
           println("|-")
           # output != 0 && println(": solving with ngen=$ngen np=$np nrmax=$nrmax ns=$ns")
           # output != 0 && println(": elite=$elite archive elite=$archiveelite fitness type=$fitnesstype")
