--- a/fresa.org
+++ b/fresa.org
@@ -1163,6 +1163,7 @@ The *output* of the progress during the search is controlled by the ~output~ opt
                  np = 10,              # points to propagate: constant (single value) or dynamic (tuple)
                  nrmax = 5,            # number of runners maximum
                  ns = 100,             # number of stable solutions for stopping
+                 orglevel = "",        # default org mode heading indentation for any output
                  output = 1,           # how often to output information
                  parameters = nothing, # allow parameters for objective function 
                  plotvectors = false,  # generate output file for search plot
@@ -1170,7 +1171,7 @@ The *output* of the progress during the search is controlled by the ~output~ opt
                  tournamentsize = 2,   # number to base selection on
                  steepness = 1.0,      # show steep is the adjustment shape for fitness
                  usemultiproc = false) # parallel processing by Fresa itself?
-      output > 0 && println("** solve $f $(orgtimestamp(now()))")
+      output > 0 && println("$orglevel* Fresa solve $f $(orgtimestamp(now()))")
       tstart = time()
       nf = 1                   # number of function evaluations
       npruned = 0              # number solutions pruned from population
@@ -1235,12 +1236,12 @@ The *output* of the progress during the search is controlled by the ~output~ opt
                   : (multithreading
                      ? "in parallel with $(Threads.nthreads()) threads."
                      : "sequentially."))
-          println("*** initial population")
+          println("$orglevel** initial population")
           println("#+name: $(f)initial")
           println(pop)
       end
       if output > 0
-          println("*** evolution")
+          println("$orglevel** evolution")
           println("#+name: $(f)evolution")
           println("#+plot: ind:1 deps:(6) with:\"points pt 7\" set:\"logscale x\"")
           @printf("| %9s | %9s | %9s | %9s | %9s |", "gen", "pop",
@@ -1442,7 +1443,7 @@ The *output* of the progress during the search is controlled by the ~output~ opt
               pop = newpop
           end
       end
-      output > 0 && println("*** Fresa run finished\n: nf=$nf npruned=$npruned", archiveelite ? " archived=$(length(archive))" : "")
+      output > 0 && println("$orglevel** Fresa run finished\n: nf=$nf npruned=$npruned", archiveelite ? " archived=$(length(archive))" : "")
       if plotvectors
           close(plotvectorio)
       end
